--- a/sensor_config.yaml
+++ b/sensor_config.yaml
@@ -1,4 +1,4 @@
-# NEW WAY OF INTEGRATION. ROOMS topic is deprecated, changed to espresense/devices/xxxx topic
+# >= VERSION 4.x NEW WAY OF INTEGRATION. ROOMS topic is deprecated, changed to espresense/devices/xxxx topic
 
 sensor:
   # EsPresence
@@ -13,5 +13,22 @@ sensor:
     device_id: "iBeacon:9db64fee-317c-47b9-8f80-5fbb6d332312-100-1"
     name: "Pixel6Pro2BLE"
     state_topic: "espresense/devices/iBeacon:xxxxxxxx-xxxx-47b9-8f80-5fbb6d332312-100-1"
+    timeout: 60
+    away_timeout: 60
+
+
+    # =< Version 4 OLD WAY OF INTEGRATION. ROOMS topic used
+    # EsPresence
+  - platform: mqtt_room
+    device_id: "iBeacon:xxxxxxxx-xxxx-4851-a4df-ceb45f113429-100-1"
+    name: "Pixel 4XL BLE"
+    state_topic: "espresense/rooms"
+    timeout: 60
+    away_timeout: 60
+
+  - platform: mqtt_room
+    device_id: "iBeacon:xxxxxxxx-xxxx-47b9-8f80-5fbb6d332312-100-1"
+    name: "Pixel 6PRO BLE"
+    state_topic: "espresense/rooms"
     timeout: 60
     away_timeout: 60
